# SI-cpp

./: .gitignore  CMakeLists.txt  Individual.cpp  Individual.h  Main.cpp  Main.h  Pop.cpp  Pop.h  README.md  disperse.cpp
Debug/: CMakeCache.txt  Makefile  cmake_install.cmake
Debug/src/: Makefile  cmake_install.cmake  data1_settings.txt  init.txt  si
Release/: CMakeCache.txt  Makefile  cmake_install.cmake
Release/src/: Makefile  cmake_install.cmake  data1.txt  si
src/: CMakeLists.txt  Individual.cpp  Individual.h  Main.cpp  Pop.cpp  Pop.h  disk.cpp  disk.h  disperse.cpp  disperse.h  ray.cpp  ray.h  ring.cpp  ring.h  rnormal.h
